# regression-analysis

./: CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
src/: CMakeLists.txt  ExponentialRegression.cpp  ExponentialRegression.hpp  LinearRegression.cpp  LinearRegression.hpp  LogarithmicRegression.cpp  LogarithmicRegression.hpp  LogisticRegression.cpp  LogisticRegression.hpp  PolynomialRegression.cpp  PolynomialRegression.hpp  PolynominalRegression.cpp  PolynominalRegression.hpp  PowerFitRegression.cpp  PowerFitRegression.hpp  Utils.cpp  Utils.hpp
tests/: CMakeLists.txt  ExponentialRegressionTests.cpp  LinearRegressionTests.cpp  LogarithmicRegressionTests.cpp  LogisticRegressionTests.cpp  PolynomialRegressionTests.cpp  PolynominalRegressionTests.cpp  PowerFitRegressionTests.cpp  UtilsTests.cpp  regressioncpptestmain.cpp
